<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:id="@+id/id1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="2.5dp"
                    android:contentDescription="id1"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="5dp"
                    app:cardUseCompatPadding="true">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:id="@+id/imageButton1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:adjustViewBounds="true"
                            app:srcCompat="@drawable/volcan_baru_cima" />

                        <TextView
                            android:id="@+id/act_textView1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentBottom="true"
                            android:fontFamily="@font/bubblegum_sans"
                            android:padding="10dp"
                            android:shadowColor="@color/black"
                            android:shadowDx="2"
                            android:shadowDy="2"
                            android:shadowRadius="3"
                            android:text="@string/act_txtTexto1"
                            android:textColor="@color/white"
                            android:textSize="28sp"
                            android:textStyle="bold" />

                    </RelativeLayout>
                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:id="@+id/id2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="2.5dp"
                    android:layout_marginRight="2.5dp"
                    android:layout_marginBottom="2.5dp"
                    android:layout_weight="1"
                    app:cardCornerRadius="5dp"
                    app:cardUseCompatPadding="true">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:id="@+id/imageButton2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:adjustViewBounds="true"
                            app:srcCompat="@drawable/bio_figura" />

                        <TextView
                            android:id="@+id/act_textView2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentBottom="true"
                            android:fontFamily="@font/bubblegum_sans"
                            android:padding="10dp"
                            android:shadowColor="@color/black"
                            android:shadowDx="2"
                            android:shadowDy="2"
                            android:shadowRadius="3"
                            android:text="@string/act_txtTexto2"
                            android:textColor="@color/white"
                            android:textSize="20sp"
                            android:textStyle="bold" />
                    </RelativeLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/id3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="2.5dp"
                    android:layout_marginTop="2.5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="2.5dp"
                    android:layout_weight="1"
                    app:cardCornerRadius="5dp"
                    app:cardUseCompatPadding="true">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:id="@+id/imageButton3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:adjustViewBounds="true"
                            app:srcCompat="@drawable/cerro" />

                        <TextView
                            android:id="@+id/act_textView3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentBottom="true"
                            android:fontFamily="@font/bubblegum_sans"
                            android:padding="10dp"
                            android:shadowColor="@color/black"
                            android:shadowDx="2"
                            android:shadowDy="2"
                            android:shadowRadius="3"
                            android:text="@string/act_txtTexto3"
                            android:textColor="@color/white"
                            android:textSize="20sp"
                            android:textStyle="bold" />
                    </RelativeLayout>

                </androidx.cardview.widget.CardView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:id="@+id/id4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="2.5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="2.5dp"
                    app:cardCornerRadius="5dp"
                    app:cardUseCompatPadding="true">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:id="@+id/imageButton4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:adjustViewBounds="true"
                            app:srcCompat="@drawable/boquete1" />

                        <TextView
                            android:id="@+id/act_textView4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentBottom="true"
                            android:fontFamily="@font/bubblegum_sans"
                            android:padding="10dp"
                            android:shadowColor="@color/black"
                            android:shadowDx="2"
                            android:shadowDy="2"
                            android:shadowRadius="3"
                            android:text="@string/act_txtTexto4"
                            android:textColor="@color/white"
                            android:textSize="28sp"
                            android:textStyle="bold" />
                    </RelativeLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:id="@+id/id5"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="2.5dp"
                    android:layout_marginRight="2.5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="1"
                    app:cardCornerRadius="5dp"
                    app:cardUseCompatPadding="true">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:id="@+id/imageButton5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:adjustViewBounds="true"
                            app:srcCompat="@drawable/valle_anton1" />

                        <TextView
                            android:id="@+id/act_textView5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentBottom="true"
                            android:fontFamily="@font/bubblegum_sans"
                            android:padding="10dp"
                            android:shadowColor="@color/black"
                            android:shadowDx="2"
                            android:shadowDy="2"
                            android:shadowRadius="3"
                            android:text="@string/act_txtTexto5"
                            android:textColor="@color/white"
                            android:textSize="20sp"
                            android:textStyle="bold" />
                    </RelativeLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/id6"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="2.5dp"
                    android:layout_marginTop="2.5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="1"
                    app:cardCornerRadius="5dp"
                    app:cardUseCompatPadding="true">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:id="@+id/imageButton6"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:adjustViewBounds="true"
                            app:srcCompat="@drawable/punta_chame" />

                        <TextView
                            android:id="@+id/act_textView6"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentBottom="true"
                            android:fontFamily="@font/bubblegum_sans"
                            android:padding="10dp"
                            android:shadowColor="@color/black"
                            android:shadowDx="2"
                            android:shadowDy="2"
                            android:shadowRadius="3"
                            android:text="@string/act_txtTexto6"
                            android:textColor="@color/white"
                            android:textSize="20sp"
                            android:textStyle="bold" />
                    </RelativeLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>